Authentication and authorization updated
