# cmd/api/middlewares.go
@@ -2,11 +2,15 @@ package main
 
 import (
 	"context"
+	"encoding/base64"
 	"errors"
+	"fmt"
 	"net/http"
 	"strconv"
+	"strings"
 
 	"github.com/go-chi/chi/v5"
+	"github.com/golang-jwt/jwt/v5"
 	"github.com/nagakushal786/post-ur-world/internal/store"
 )
 
@@ -65,4 +69,124 @@ func (app *application) usersContextMiddleware(next http.Handler) http.Handler{
 		ctx=context.WithValue(ctx, userCtx, user)
 		next.ServeHTTP(w, req.WithContext(ctx))
 	})
+}
+
+func (app *application) BasicAuthMiddleware() func(http.Handler) http.Handler{
+	return func(next http.Handler) http.Handler{
+		return http.HandlerFunc(func(w http.ResponseWriter, req *http.Request){
+			// read the auth header
+			authHeader:=req.Header.Get("Authorization")
+			if authHeader==""{
+				app.unAuthorizationBasicError(w, req, fmt.Errorf("Authorization header is missing"))
+				return
+			}
+
+			// Authorization: Basic <token>
+			// parse it to base64 string
+			parts:=strings.Split(authHeader, " ")
+			if len(parts)!=2 || parts[0]!="Basic"{
+				app.unAuthorizationBasicError(w, req, fmt.Errorf("Authorization header is malformed"))
+				return
+			}
+
+			// decode it
+			decoded, err:=base64.StdEncoding.DecodeString(parts[1])
+			if err!=nil{
+				app.unAuthorizationBasicError(w, req, err)
+				return
+			}
+
+			username:=app.config.auth.basic.username
+			password:=app.config.auth.basic.password
+
+			// check the credentials
+			creds:=strings.SplitN(string(decoded), ":", 2)
+			if len(creds)!=2 || creds[0]!=username || creds[1]!=password{
+				app.unAuthorizationBasicError(w, req, fmt.Errorf("Invalid credentials"))
+				return
+			}
+
+			next.ServeHTTP(w, req)
+		})
+	}
+}
+
+func (app *application) AuthTokenMiddleware(next http.Handler) http.Handler{
+	return http.HandlerFunc(func(w http.ResponseWriter, req *http.Request){
+		// read the auth header
+		authHeader:=req.Header.Get("Authorization")
+		if authHeader==""{
+			app.unAuthorizationError(w, req, fmt.Errorf("Authorization header is missing"))
+			return
+		}
+
+		// Authorization: Bearer <token>
+		// parse it to base64 string
+		parts:=strings.Split(authHeader, " ")
+		if len(parts)!=2 || parts[0]!="Bearer"{
+			app.unAuthorizationError(w, req, fmt.Errorf("Authorization header is malformed"))
+			return
+		}
+
+		token:=parts[1]
+		jwtToken, err:=app.authenticator.ValidateToken(token)
+		if err!=nil{
+			app.unAuthorizationError(w, req, err)
+			return
+		}
+
+		claims, _:=jwtToken.Claims.(jwt.MapClaims)
+
+		userID, err:=strconv.ParseInt(fmt.Sprintf("%.f", claims["sub"]), 10, 64)
+		if err!=nil{
+			app.unAuthorizationError(w, req, err)
+			return
+		}
+
+		ctx:=req.Context()
+		user, err:=app.store.Users.GetByID(ctx, userID)
+		if err!=nil{
+			app.unAuthorizationError(w, req, err)
+			return
+		}
+
+		ctx=context.WithValue(ctx, userCtx, user)
+		next.ServeHTTP(w, req.WithContext(ctx))
+	})
+}
+
+func (app *application) checkPostOwnership(requiredRole string, next http.HandlerFunc) http.HandlerFunc{
+	return http.HandlerFunc(func(w http.ResponseWriter, req *http.Request){
+		user:=getUserFromCtx(req)
+		post:=getPostFromCtx(req)
+
+		// If it is the user's post
+		if post.UserID==user.ID{
+			next.ServeHTTP(w, req)
+			return
+		}
+
+		// Role precedence check
+		allowed, err:=app.checkRolePrecedence(req.Context(), user, requiredRole)
+		if err!=nil{
+			app.internalServerError(w, req, err)
+			return
+		}
+
+		if !allowed{
+			app.forbiddenResponse(w, req)
+			return
+		}
+
+		next.ServeHTTP(w, req)
+	})
+}
+
+func (app *application) checkRolePrecedence(ctx context.Context, user *store.User, roleName string) (bool, error){
+	role, err:=app.store.Roles.GetByName(ctx, roleName)
+	if err!=nil{
+		return false, err
+	}
+
+	return user.Role.Level>=role.Level, nil
 }
